Fully functional version of app
No server yet, but everything's tested and working well on the mobile
side. Tomorrow's project: backends.

--- a/res/layout/activity_logging.xml
+++ b/res/layout/activity_logging.xml
@@ -30,4 +30,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/device_id"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/deviceIdText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </LinearLayout>
